# deepreach_jax

./: .gitignore  README.md  dataio.py  dbg.py  environment.yml  hj_functions.py  hji_air3d.py  loss_functions.py  modules.py  pyproject.toml  run.sh  test.py  train.py  utils.py
deepreach_jax/: dataio.py  hj_functions.py  modules.py  utils.py
experiment_scripts/: hji_1E2P.py  hji_1E_NP.py  hji_2A1D.py  hji_air3d.py
validation_scripts/: validate_1E2P.py  validate_air3d.py
