[project]
name = "deepreach-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basedpyright>=1.29.2",
    "flax>=0.10.6",
    "jax[cuda12]>=0.6.1",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "ruff>=0.11.13",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
